--- a/Tasks/Task 2/index.html
+++ b/Tasks/Task 2/index.html
@@ -28,7 +28,7 @@
                         <input type="text" id="Name" placeholder="Name"/>
 
                         
-                        <label for="privacy" class="box"></label>
+                        <label for="privacy" class="box privacy"></label>
                         <input type="text" id="privacy" placeholder="Your privacy is protected"/>
 
                         </div>
