--- a/Tasks/Task 4/index.html
+++ b/Tasks/Task 4/index.html
@@ -11,14 +11,17 @@
     <header></header>
 
     <main>
-      <section>
+      <section id="mainSection">
         <div class="mainDiv">
           <div class="firstDiv">
             <img src="./assets/images/girl-2583442_1920.jpg" alt="Image Here" class="img1">
-            <img src="./assets/images/18507529_Triangle_pattern_007.jpg" alt="Image here" class="img2">  
-            <div class="overlayText1">24+</div>
-            <div class="overlayText2">Startups created</div>          
-            
+            <div> 
+              <img src="./assets/images/18507529_Triangle_pattern_007.jpg" alt="Image here" class="img2">  
+              <div>
+              <div class="overlayText1">24+</div>
+              <div class="overlayText2">Startups created</div>
+              </div>               
+            </div>            
           </div>
 
           <div class="secondDiv">
