--- a/Task 15 whole website/Task 15 whole website/index.html
+++ b/Task 15 whole website/Task 15 whole website/index.html
@@ -10,7 +10,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
   </head>
 
   <body>
@@ -217,11 +219,11 @@
 
                     <div class="col-lg-6 mt-lg-5">
 
-                        <img src="./assets/images/Boxes.png" alt="">
+                        <img data-aos="fade-up"  data-aos-duration="1000" src="./assets/images/Boxes.png" alt="">
 
                     </div>
 
-                    <div class="col-lg-6 mt-lg-5 pt-lg-5">
+                    <div class="col-lg-6 mt-lg-5 pt-lg-5" data-aos="fade-up"  data-aos-duration="2000">
 
                         <h2 class="sec0BottomH2 mt-lg-5">Strategies that get you on the path to success</h2>
 
@@ -714,6 +716,13 @@
 
         
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
